2022-01-26  Julien Bect  <julien.bect@centralesupelec.fr>

	Refresh README.md

	* README.md: Update sourceforge -> github + other changes.

2022-01-25  Julien Bect  <julien.bect@centralesupelec.fr>

	Add missing 'hold off' in some plotting functions

	* utils/stk_plot_histnormres.m: Add missing 'hold off'.
	* utils/stk_plot_predvsobs.m: Idem.

	stk_example_kb10.m: Fix typo.

	* stk_example_kb10.m: Fix typo.

2022-01-23  Julien Bect  <julien.bect@centralesupelec.fr>

	Makefile: sourceforge -> github in variable names & targets

	* Makefile: sourceforge -> github in variable names & targets.

2022-01-20  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_generate_samplepaths.m: Fix copyright notice

	* utils/stk_generate_samplepaths.m: Fix copyright notice.

2022-01-10  Julien Bect  <julien.bect@centralesupelec.fr>

	Calling stk_model with a function handle is better

	* core/stk_make_matcov.m: Call stk_model with a function handle.
	* core/stk_model_update.m: Idem.
	* core/stk_predict.m: Idem.
	* core/stk_predict_leaveoneout.m: Idem.
	* covfcs/stk_discretecov.m: Idem.
	* examples/01_kriging_basics/stk_example_kb01.m: Idem.
	* examples/01_kriging_basics/stk_example_kb01n.m: Idem.
	* examples/01_kriging_basics/stk_example_kb02.m: Idem.
	* examples/01_kriging_basics/stk_example_kb02n.m: Idem.
	* examples/01_kriging_basics/stk_example_kb03.m: Idem.
	* examples/01_kriging_basics/stk_example_kb05.m: Idem.
	* examples/01_kriging_basics/stk_example_kb06.m: Idem.
	* examples/01_kriging_basics/stk_example_kb07.m: Idem.
	* examples/01_kriging_basics/stk_example_kb08.m: Idem.
	* examples/01_kriging_basics/stk_example_kb09.m: Idem.
	* examples/02_design_of_experiments/stk_example_doe03.m: Idem.
	* examples/02_design_of_experiments/stk_example_doe04.m: Idem.
	* examples/02_design_of_experiments/stk_example_doe05.m: Idem.
	* examples/02_design_of_experiments/stk_example_doe06.m: Idem.
	* examples/03_miscellaneous/stk_example_misc02.m: Idem.