@@ -1,6 +1,6 @@
 --- a/stk_init.m
 +++ b/stk_init.m
-@@ -243,27 +243,22 @@
+@@ -246,27 +246,22 @@
  
  regex1 = strcat ('^', escape_regexp (root));
  
